# crudAntDesign

backend/: .dockerignore  .dockerignore_Zone.Identifier  .gitignore  README.md  env_example  init_python_path.py  pyproject.toml  requirements.txt
backend/app/: main.py  run.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: api_product.py  api_token.py  api_user.py
backend/app/constant/: __init__.py
backend/app/controller/: control.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: auth_user.py
backend/app/oauth/: __init__.py  oauth_base.py
backend/app/reuse/: defGlob.py
backend/app/schemas/: __init__.py  auth_user.py  token.py  token_permission.py
backend/app/service/: token_service.py  url_service.py
backend/app/utils/: ratelimit_utils.py
backend/deploy/: deploy_all.sh  deploy_backend.sh  env_docker
backend/deploy/backend/: docker-compose.yml
backend/deploy/dockerfile/backend/: Dockerfile
backend/deploy/dockerfile/redis/: Dockerfile  entrypoint.sh
backend/deploy/postgres/: docker-compose.yml  postgresql.conf
backend/deploy/redis/: docker-compose.yml
backend/helper/: alchemy_helper.py  datetime_helper.py  logger_helper.py  project_helper.py
backend/tests/: test_limit.py
frontendcrud/: package-lock.json  package.json
frontendcrud/src/: App.js
frontendcrud/src/components/: Create.js  Delete.js  Edit.js  Get.js  Info.js  main.css
frontendcrud/src/styles/: main.css
